<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/lblRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/lblRegister"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal|fill_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/txtName"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txtPass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txtPassConfirm"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/btnCreateAccount" />

</RelativeLayout>